dataservice api implementation
